adds content and image to index.html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTM6201 - Week 1 - Demo</title>
+    <title>Francois Francoeur</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to MTM6201 - Web Dev II</h1>
+        <h1>Francois Francoeur</h1>
     </header>
     <main>
-        <p>During this term, we will be diving deeper into HTML and CS5. We will also take a
-            look at Accessibility and Web Performances.</p>
+        <img src="images/IMG_039.png" alt="self portrait image">
+        <h3>Description List</h3>
+        <dl>
+            <dt>Student Number</dt>
+            <dd>041080754</dd>
+
+            <dt>Program Name</dt>
+            <dd>Interactive Media Design</dd>
+
+            <dt>Course Code and Name</dt>
+            <dd>MTM6201-030 Web Development II</dd>
+
+            <dt>Interesting Fact</dt>
+            <dd></dd>
+        </dl>
     </main>
     <footer>
         <p>&copy;Copyright 2023, All rights reserved.</p>
