--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <dd>MTM6201-030 Web Development II</dd>
 
             <dt>Interesting Fact</dt>
-            <dd></dd>
+            <dd>I have a background in mechanical engineering.</dd>
         </dl>
     </main>
     <footer>
